--- a/AEA3_02_weblog/index.html
+++ b/AEA3_02_weblog/index.html
@@ -14,7 +14,7 @@
     <h1>Pàgina Principal</h1>
     <div class="contenidor">
         <div class="cap">
-            <ul>
+            <ul class="menuhoritzontal">
                 <li>Qui som</li>
                 <li>Què fem</li>
                 <li>On som</li>
@@ -66,6 +66,26 @@
 
     </div>
 
+
+
+
+
+    <div id="alternador">
+        <input type="checkbox" id="alterna">
+        <label for="alterna">
+            <b></b>
+            <b></b>
+            <b></b>
+        </label>
+        
+        <ul class="desplega">
+            <li><a href="#">Qui som</a></li>
+            <li><a href="#">Què fem</a></li>
+            <li><a href="#">On som</a></li>
+            <li><a href="#">Contacte</a></li>
+        </ul>
+    
+    </div>
 
 </body>
 </html>
