--- a/AEA7_01_progres/index.html
+++ b/AEA7_01_progres/index.html
@@ -1,8 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+<html lang="es" manifest="cache.manifest"></html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <meta name="theme-color" content="#FFA500">
+  <meta name="msapplication-navbutton-color" content="FFA500">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="FFA500">
+  <link rel="icon" sizes="192x192" href="icon.png">
+  <link rel="icon" sizes="512x512" href="icon.png">
+  <link rel="apple-touch-icon" href="icon.png">
+
     <title>Progres</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fascinate+Inline&display=swap" rel="stylesheet">
 
